--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Basic theme information -->
-    <string name="theme_title">Apex Theme Sample</string>
+    <string name="theme_title">DEMENTED Droid Apex Theme</string>
     <string name="developer_name">cphelps76</string>
     <!-- This (optional) link will appear at the end of the theme description -->
     <string name="developer_link">cphelps76@droidconcepts.com</string>
